--- a/vmrzohocrm.html
+++ b/vmrzohocrm.html
@@ -1,4 +1,6 @@
+<script>
 var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || 
 {widgetcode:"8c74a7b1ffb38cdacb03c929e8c2b647c00b074a1277a07ecb3b4ae2520ded03", values:{},ready:function(){}};
 var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
 s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
+</script>
